# TowerDefence

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  gmon.out  lsan.supp
resources/maps/: map1.txt  map2.txt  map3.txt  map4.txt
resources/shaders/: default_fragment.glsl  fragment.glsl  hover_fragment.glsl  menu_fragment.glsl  menu_vertex.glsl  rect_vertex.glsl  text_fragment.glsl  text_vertex.glsl  vertex.glsl
src/: main.cpp
src/components/: AnimationComponent.h  ChildComponent.h  ClickableComponent.h  CollisionComponent.h  ColorComponent.h  ComponentDebugPrint.h  DamageComponent.h  DeathComponent.h  DirectionComponent.h  FlagComponent.h  HealthComponent.h  MenuComponent.h  PathfindingComponent.h  PositionComponent.h  RewardComponent.h  RotationComponent.h  ShaderComponent.h  SizeComponent.h  SpeedComponent.h  TextComponent.h  TextureComponent.h  UpgradeComponent.h  VelocityComponent.h  WeaponComponent.h
src/ecs/: Component.h  ComponentArray.h  ComponentManager.cpp  ComponentManager.h  EntityFactory.cpp  EntityFactory.h  EntityManager.cpp  EntityManager.h  System.h  SystemManager.cpp  SystemManager.h
src/enemy/: Enemy.h  EnemyFactory.cpp  EnemyFactory.h
src/engine/: EngineContext.h  GLContext.cpp  GLContext.h  InputRouter.cpp  InputRouter.h  QuadTree.cpp  QuadTree.h
src/event/: Event.h  EventDispatcher.h
src/font/: FontLoader.cpp  FontLoader.h
src/map/: Map.h  MapLoader.cpp  MapLoader.h
src/menu/: Menu.cpp  Menu.h  UIButton.h  UIElement.h  UILabel.h
src/shader/: Shader.cpp  Shader.h  Uniform.h  shader.cpp  shader.h
src/systems/: AnimationSystem.cpp  AnimationSystem.h  BuildSystem.cpp  BuildSystem.h  ClickSystem.cpp  ClickSystem.h  CollisionSystem.cpp  CollisionSystem.h  CombatSystem.cpp  CombatSystem.h  DebugSystem.h  EntityFactory.cpp  EntityFactory.h  MenuSystem.cpp  MenuSystem.h  MovementSystem.cpp  MovementSystem.h  PathfindingSystem.cpp  PathfindingSystem.h  RenderSystem.cpp  RenderSystem.h  ShootingSystem.cpp  ShootingSystem.h  SpawningSystem.cpp  SpawningSystem.h  StateSystem.cpp  StateSystem.h
src/texture/: Texture.h  TextureManager.cpp  TextureManager.h
src/thread/: ThreadPool.cpp  ThreadPool.h
src/tile/: Tile.h  TileFactory.cpp  TileFactory.h  TileType.h
src/utils/: Color.cpp  Color.h  Direction.h  Globals.h  State.h  String.h  TextureCoords.h  ZLayer.h
supp/: tsan.supp
(+1 files in other folders)
